src/test/data/tests/chapter_17/invalid_types/extra_credit/postfix_incr_void_pointer.c
// Can't apply prefix or postfix ++/-- to void
void f(void){
    return;
}

int main(void) {
    f()++;
    return 0;
}
